# datarobot-storage

./: .env.template  .gitignore  .yamlfmt.yml  CHANGELOG.md  README.md  Taskfile.yaml  debug_deployment_errors.md  get_deployment_logs.py  test_0105.md  test_agent_commands.md  test_agent_troubleshooting.md
.github/workflows/: agent_retrieval_agent-test.yml  core-test.yml  frontend_web-vitest.yml  web-test.yml
.pulumi/workspaces/: talk-to-my-docs-09e8ff062c768401258f9a2dd0535c548eab0278-workspace.json
agent_retrieval_agent/: README.md  Taskfile.yml  agent_inputs.json  example-completion.json  pyproject.toml
agent_retrieval_agent/custom_model/: agent.py  config.py  custom.py  helpers.py  model-metadata.yaml  models.py  tool.py  train.py
agent_retrieval_agent/docker_context/: Dockerfile  requirements.in  requirements.txt
core/: pyproject.toml
frontend_web/: .gitignore  Taskfile.yaml  package-lock.json  package.json  tailwind.config.js
frontend_web/src/: App.tsx  index.css  main.tsx  routesConfig.tsx
frontend_web/tests/: App.test.tsx  setupTests.ts
infra/: Taskfile.yaml  __main__.py  pyproject.toml
infra/configurations/llm/: blueprint_with_external_llm.py  blueprint_with_llm_gateway.py  deployed_llm.py  registered_model.py
infra/infra/: agent_retrieval_agent.py  frontend_web.py  oauth.py  web.py
infra/tests/: __init__.py  test_agent_retrieval_agent.py
web/: README.md  Taskfile.yaml  alembic_migration.py  build-app.sh  pyproject.toml  start-app.sh
web/app/: __init__.py  config.py  db.py  deps.py  streams.py
web/migrations/: README.md
(+83 files in other folders)
