[project]
name = "infra"
version = "0.0.1"
description = """
*Talk to My Docs** delivers a seamless **talk-to-your-docs** experience, transforming documents search and summary. Simply connect the application with your document sources. Then, ask a question, and the agents will work with you to achieve your goals.
"""
requires-python = ">=3.11"

dependencies = [
    "datarobot>=3.8.2",
    "datarobot-pulumi-utils>=0.1.1",
    "langgraph-checkpoint>=3.0.0",
    "litellm>=1.76.0",
    "pulumi>=3.175.0",
    "pulumi-datarobot>=0.10.22",
    "pulumi-command>=1.1.3",
    "jinja2>=3.1.5,<4.0",
    "ipdb>=0.13.13",
    "rpdb>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.1.1",
    "pytest>=7.4.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.mypy]
exclude = "configurations"
